log
Sat, May  3, 2025  7:23:52 PM: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
Sat, May  3, 2025  7:25:46 PM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
0730c9d
Sat, May  3, 2025  7:26:59 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
5cd52d3
Sat, May  3, 2025  7:46:03 PM: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  11|6
total_score: 15/70
df42972
Sat, May  3, 2025  8:01:30 PM: 
 treemap.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
a1dbcde
Sat, May  3, 2025  8:34:42 PM: 
 treemap.c | 44 ++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 40 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'removeNode':
treemap.c:94:30: error: 'return' with a value, in function returning void [-Werror=return-type]
   94 |     if (node == NULL) return NULL;
      |                              ^~~~
treemap.c:93:6: note: declared here
   93 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
43b2909
Sat, May  3, 2025  8:36:50 PM: 
Compilation failed
In file included from test.c:4:
treemap.c: In function 'removeNode':
treemap.c:94:30: error: 'return' with a value, in function returning void [-Werror=return-type]
   94 |     if (node == NULL) return NULL;
      |                              ^~~~
treemap.c:93:6: note: declared here
   93 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
d8ed0f6
